[package]
name = "neo4j-lab"
version = "0.1.0"
authors = ["JP Cedeno"]
edition = "2018"

[dependencies]
bytes = "0.5.6"
base64 = "0.12.3"
hyper = "^0.13.7"
hyper-tls = "^0.4.3"
tokio = { version = "0.2.22", features = ["full"] }
serde = { version = "^1", features = ["derive"]  }
serde_json = "^1"
serde_derive = "^1"
rusoto_core = "0.45.0"
rusoto_kms = "0.45.0"
structopt = "0.3.17"